asyncapi-generator: authentication and README.md