@@ -1,24 +1,103 @@
-# AsyncAPI and Spring Cloud Stream with Avro and JSON
+# AsyncAPI Generator for Java / Spring-Boot
 > 👉 ZenWave360 Helps You Create Software Easy to Understand
 
 [![Maven Central](https://img.shields.io/maven-central/v/io.zenwave360.sdk/zenwave-sdk.svg?label=Maven%20Central&logo=apachemaven)](https://search.maven.org/artifact/io.zenwave360.sdk/zenwave-sdk)
 [![GitHub](https://img.shields.io/github/license/ZenWave360/zenwave-sdk)](https://github.com/ZenWave360/zenwave-sdk/blob/main/LICENSE)
 
-Generates strongly typed SpringCloudStreams3 producer/consumer classes for AsyncAPI with Avro and JSON DTOs
+![AsyncAPI and Spring Cloud Streams 3](../../docs/ZenWave360-AsyncAPI-SpringCloudStreams.excalidraw.svg)
+
+Schema-first code generator for AsyncAPI specifications that generates complete Java/Spring-Boot implementations with support for Avro and JSON DTOs.
+
+<!-- TOC -->
+* [AsyncAPI Generator for Java / Spring-Boot](#asyncapi-generator-for-java--spring-boot)
+  * [Features](#features)
+  * [Quick Configuration](#quick-configuration)
+  * [Command Line Usage](#command-line-usage)
+  * [Maven Usage](#maven-usage)
+    * [Properties Configuration](#properties-configuration)
+    * [Plugin Configuration](#plugin-configuration)
+  * [Gradle Usage](#gradle-usage)
+  * [Configuration Options](#configuration-options)
+  * [Getting Help](#getting-help)
+<!-- TOC -->
+
+## Features
+
+**Generated Code:**
+- Complete Consumer/Producer implementations for Java/Spring-Boot with thin wrappers around:
+  - **Spring Cloud Stream**: Connects to virtually any message broker
+  - **Spring Kafka**: Native official Spring library for Kafka
+- **JSON DTOs** using [jsonschema2pojo](https://www.jsonschema2pojo.org/) library
+- **Avro DTOs** using [Apache Avro](https://avro.apache.org/docs/current/gettingstartedjava/) library
+
+**Supported Features:**
+- AsyncAPI v2 and v3
+- Local files, classpath files, and authenticated remote files via HTTP/HTTPS
+- Generates all AsyncAPI DTOs (JsonSchema or Avro schemas)
+- Automatic schema sorting for Avro versions prior to 1.12.0
+- Strongly typed header objects
+
+**Advanced Patterns:**
+- Transactional Outbox using Spring Modulith implementation
+- Role reversal (provider ↔ client) with selective operation generation
+- Automatic header population at runtime using `x-runtime-expression` extension property
+
+## Quick Configuration
+
+The essential configuration options are:
+
+- **`inputSpec`**: AsyncAPI file path (local, classpath, or remote)
+- **`role`**: `provider` (default) or `client` 
+- **`templates`**: `SpringCloudStream` (default) or `SpringKafka`
+- **`modelPackage`**: Java package for DTOs (required for JSON Schema only)
+- **`producerApiPackage`**: Producer API package (provider role)
+- **`consumerApiPackage`**: Consumer API package (client role)
+- **`avroCompilerProperties.imports`**: Avro files/folders (comma-separated)
+- **`operationIds`**: Specific operations to generate (empty = all)
+
+For authenticated remote files, use the `authentication` property.
+
+Additional configuration for upstream libraries:
+- **`avroCompilerProperties.xxx`**: [Avro Compiler properties](https://avro.apache.org/docs/current/gettingstartedjava/)
+- **`jsonschema2pojo.xxx`**: [JsonSchema2Pojo properties](https://www.jsonschema2pojo.org/)
+
+## Command Line Usage
+
+```shell
+jbang zw -p AsyncAPIGeneratorPlugin \
+  authentication[0].key=API_KEY \
+  authentication[0].value=API_KEY_VALUE \
+  apiFile=https://raw.githubusercontent.com/ZenWave360/zenwave-playground/refs/heads/main/examples/asyncapi-shopping-cart/apis/asyncapi.yml \
+  consumerApiPackage=io.example.api.consumer \
+  producerApiPackage=io.example.api.producer \
+  modelPackage=io.example.api.model \
+  avroCompilerProperties.imports="\
+    https://raw.githubusercontent.com/ZenWave360/zenwave-playground/refs/heads/main/examples/asyncapi-shopping-cart/apis/avro/Item.avsc,\
+    https://raw.githubusercontent.com/ZenWave360/zenwave-playground/refs/heads/main/examples/asyncapi-shopping-cart/apis/avro/ShoppingCart.avsc" \
+  targetFolder=target/generated-sources
+```
 
 ## Maven Usage
 
-- Configure `zenwave-sdk-maven-plugin` in your `pom.xml`
-- Add `asyncapi-spring-cloud-streams-with-avro-json` as dependency to `zenwave-sdk-maven-plugin`
-- Bring your own version of `avro-compiler` as dependency to `zenwave-sdk-maven-plugin`, supporting versions 1.8.0 - 1.12.0+
-- Include maven dependencies holding your API files in case you are using `classpath:` scheme in `inputSpec`.
-- Set `<generatorName>SpringCloudStreamsWithDtosPlugin</generatorName>`
-- Point to your AsyncAPI file in `inputSpec`: supported schemes are `classpath:`, `https://` and regular local files.
-- Configure basic options:
-  - `producerApiPackage`,`consumerApiPackage`: producer/consumer packages (for events/commands respectively)
-  - `modelPackage`: package for generated DTOs in case of JSON payloads
-  - `avroCompilerProperties.*`: options like `imports`, `includes`, `excludes`, `customLogicalTypeFactories`, `customConversions`, etc... See [AvroCompilerProperties](https://github.com/ZenWave360/zenwave-sdk/blob/main/plugins/avro-schema-compiler/src/main/java/io/zenwave360/sdk/plugins/AvroCompilerProperties.java)
-  - `jsonschema2pojo.*`: JsonSchema2Pojo settings for downstream library. See [JsonSchema2PojoConfiguration.java](https://github.com/ZenWave360/zenwave-sdk/blob/main/plugins/asyncapi-jsonschema2pojo/src/main/java/io/zenwave360/sdk/plugins/JsonSchema2PojoConfiguration.java)
+### Properties Configuration
+
+Example properties configuration:
+
+```xml
+<properties>
+    <asyncapiPrefix>classpath:io/example/asyncapi/shoppingcart/apis</asyncapiPrefix>
+    <asyncapi.inputSpec>${asyncapiPrefix}/asyncapi.yml</asyncapi.inputSpec>
+    <asyncapi.avro.imports>
+        ${asyncapiPrefix}/avro/
+    </asyncapi.avro.imports>
+    <zenwave.asyncapiGenerator.templates>SpringKafka</zenwave.asyncapiGenerator.templates>
+
+    <asyncApiProducerApiPackage>${basePackage}.events</asyncApiProducerApiPackage>
+    <asyncApiConsumerApiPackage>${basePackage}.commands</asyncApiConsumerApiPackage>
+</properties>
+```
+
+### Plugin Configuration
 
 ```xml
 <plugin>
@@ -26,29 +105,33 @@ Generates strongly typed SpringCloudStreams3 producer/consumer classes for Async
     <artifactId>zenwave-sdk-maven-plugin</artifactId>
     <version>${zenwave.version}</version>
     <configuration>
-        <addCompileSourceRoot>true</addCompileSourceRoot><!-- default is true -->
-        <addTestCompileSourceRoot>true</addTestCompileSourceRoot><!-- default is true -->
+        <inputSpec>${asyncapi.inputSpec}</inputSpec>
+        <skip>false</skip>
+        <addCompileSourceRoot>true</addCompileSourceRoot>
+        <addTestCompileSourceRoot>true</addTestCompileSourceRoot>
+        <authentication>
+            <authentication>
+                <key>API_KEY</key>
+                <value>XXXXXX</value>
+            </authentication>
+        </authentication>
     </configuration>
     <executions>
         <execution>
-            <id>generate-asyncapi-with-dtos</id>
+            <id>generate-asyncapi</id>
             <phase>generate-sources</phase>
             <goals>
                 <goal>generate</goal>
             </goals>
             <configuration>
-                <generatorName>SpringCloudStreamsWithDtosPlugin</generatorName>
-                <inputSpec>classpath:model/asyncapi.yml</inputSpec><!-- supported schemes are `classpath:`, `https://` and regular local files -->
+                <generatorName>AsyncAPIGenerator</generatorName>
                 <configOptions>
-                    <producerApiPackage>io.example.api.producer</producerApiPackage>
-                    <consumerApiPackage>io.example.api.consumer</consumerApiPackage>
-
-                    <avroCompilerProperties.imports>classpath:avro</avroCompilerProperties.imports><!-- supports local files/folders, `classpath:` files/folders or `https://` file resources -->
-
-                    <modelPackage>io.example.api.model</modelPackage>
-                    <jsonschema2pojo.includeTypeInfo>true</jsonschema2pojo.includeTypeInfo>
-                    
-                    <transactionalOutbox>modulith</transactionalOutbox>
+                    <role>provider</role>
+                    <templates>${zenwave.asyncapiGenerator.templates}</templates>
+                    <modelPackage>${asyncApiModelPackage}</modelPackage> <!--  required only for json-schema, otherwise it uses avro package -->
+                    <producerApiPackage>${asyncApiProducerApiPackage}</producerApiPackage>
+                    <consumerApiPackage>${asyncApiConsumerApiPackage}</consumerApiPackage>
+                    <avroCompilerProperties.imports>${asyncapi.avro.imports}</avroCompilerProperties.imports><!-- comma separated list of avro files or folders -->
                 </configOptions>
             </configuration>
         </execution>
@@ -56,70 +139,135 @@ Generates strongly typed SpringCloudStreams3 producer/consumer classes for Async
     <dependencies>
         <dependency>
             <groupId>io.zenwave360.sdk.plugins</groupId>
-            <artifactId>asyncapi-spring-cloud-streams-with-avro-json</artifactId>
-            <version>${zenwave.version}</version><!-- 2.2.0+ -->
+            <artifactId>asyncapi-generator</artifactId>
+            <version>${zenwave.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.avro</groupId>
             <artifactId>avro-compiler</artifactId>
-            <version>${avro-compiler.version}</version><!-- 1.8.0 - 1.12.0+ -->
+            <version>${avro.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-core</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-databind</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 </plugin>
 ```
 
+## Gradle Usage
 
+```kotlin
+val asyncapiPrefix = "classpath:io/example/asyncapi/shoppingcart/apis"
+val asyncapiInputSpec = "$asyncapiPrefix/asyncapi.yml"
+val asyncapiAvroImports = "$asyncapiPrefix/avro/"
+val asyncapiGeneratorTemplates = "SpringKafka"
+val asyncApiProducerApiPackage = "io.zenwave360.examples.events"
+val asyncApiConsumerApiPackage = "io.zenwave360.examples.commands"
 
-## Options
+plugins {
+    java
+    id("dev.jbang") version "0.3.0"
+}
 
-| **Option**                                          | **Description** | **Type** | **Default** | **Values** |
-|-----------------------------------------------------|-----------------|----------|-------------|------------|
-| `apiFile`                                           | API Specification File  | URI |  |   |
-| `role`                                              | Project role: provider/client  | AsyncapiRoleType | provider | provider, client  |
-| `style`                                             | Programming style  | ProgrammingStyle | imperative | imperative, reactive  |
-| `modelPackage`                                      | Java Models package name  | String |  |   |
-| `producerApiPackage`                                | Java API package name for outbound (producer) services. It can override apiPackage for producers.  | String | {{apiPackage}} |   |
-| `consumerApiPackage`                                | Java API package name for inbound (consumer) services. It can override apiPackage for consumer.  | String | {{apiPackage}} |   |
-| `apiPackage`                                        | Java API package, if `producerApiPackage` and `consumerApiPackage` are not set.  | String |  |   |
-| `jsonschema2pojo`                                   | JsonSchema2Pojo settings for downstream library [(docs)](https://github.com/ZenWave360/zenwave-sdk/blob/main/plugins/asyncapi-jsonschema2pojo/src/main/java/io/zenwave360/sdk/plugins/JsonSchema2PojoConfiguration.java) | Map | {} |   |
-| `avroCompilerProperties`                            | Avro Compiler Properties  | AvroCompilerProperties | See [AvroCompilerProperties](https://github.com/ZenWave360/zenwave-sdk/blob/main/plugins/avro-schema-compiler/src/main/java/io/zenwave360/sdk/plugins/AvroCompilerProperties.java) |   |
-| `avroCompilerProperties.sourceDirectory`            | Avro schema file or folder containing avro schemas  | File |  |   |
-| `avroCompilerProperties.imports`                    | Avro schema files or folders containing avro schemas. It supports local files/folders, `classpath:` files/folders or `https://` file resources.  | List |  |   |
-| `avroCompilerProperties.includes`                   | A set of Ant-like inclusion patterns used to select files from the source tree that are to be processed. By default, the pattern **\/*.avsc is used to include all avro schema files.  | List | [**/*.avsc] |   |
-| `avroCompilerProperties.excludes`                   | A set of Ant-like exclusion patterns used to prevent certain files from being processed. By default, this set is empty such that no files are excluded.  | List |  |   |
-| `avroCompilerProperties.customLogicalTypeFactories` | Custom Logical Type Factories  | List |  |   |
-| `avroCompilerProperties.customConversions`          | Custom Conversions  | List |  |   |
-| `operationIds`                                      | Operation ids to include in code generation. Generates code for ALL if left empty  | List | [] |   |
-| `messageNames`                                      | Message names to include in code generation (combined with operationIds). Generates code for ALL if left empty  | List | [] |   |
-| `excludeOperationIds`                               | Operation ids to exclude in code generation. Skips code generation if is not included or is excluded.  | List | [] |   |
-| `bindingTypes`                                      | Binding names to include in code generation. Generates code for ALL bindings if left empty  | List |  |   |
-| **JsonSchema2Pojo Options**                         | | | | |
-| `modelNamePrefix`                                   | Sets the prefix for model classes and enums  | String |  |   |
-| `modelNameSuffix`                                   | Sets the suffix for model classes and enums  | String |  |   |
-| `generatedAnnotationClass`                          | Annotation class to mark generated code (e.g. `org.springframework.aot.generate.Generated`). When retained at runtime, this prevents code coverage tools like Jacoco from including generated classes in coverage reports.  | String |  |   |
-| **SpringCloudStreams3 Options**                     | | | | |
-| `transactionalOutbox`                               | Transactional outbox type for message producers.  | TransactionalOutboxType | none | none, modulith, mongodb, jdbc  |
-| `bindingPrefix`                                     | SC Streams Binding Name Prefix (used in @Component name)  | String |  |   |
-| `bindingSuffix`                                     | Spring-Boot binding suffix. It will be appended to the operation name kebab-cased. E.g. <operation-id>-in-0  | String | -0 |   |
-| `runtimeHeadersProperty`                            | AsyncAPI extension property name for runtime auto-configuration of headers.  | String | x-runtime-expression |   |
-| `includeApplicationEventListener`                   | Include ApplicationEvent listener for consuming messages within the modulith.  | boolean | false |   |
-| `skipProducerImplementation`                        | Generate only the producer interface and skip the implementation.  | boolean | false |   |
-| `exposeMessage`                                     | Whether to expose underlying spring Message to consumers or not.  | boolean | false |   |
-| `useEnterpriseEnvelope`                             | Include support for enterprise envelop wrapping/unwrapping.  | boolean | false |   |
-| `envelopeJavaTypeExtensionName`                     | AsyncAPI Message extension name for the envelop java type for wrapping/unwrapping.  | String | x-envelope-java-type |   |
-| `methodAndMessageSeparator`                         | To avoid method erasure conflicts, when exposeMessage or reactive style this character will be used as separator to append message payload type to method names in consumer interfaces.  | String | $ |   |
-| `consumerPrefix`                                    | SC Streams Binder class prefix  | String |  |   |
-| `consumerSuffix`                                    | SC Streams Binder class suffix  | String | Consumer |   |
-| `consumerServicePrefix`                             | Business/Service interface prefix  | String | I |   |
-| `consumerServiceSuffix`                             | Business/Service interface suffix  | String | ConsumerService |   |
-| **General Options**                                 | | | | |
-| `sourceFolder`                                      | Source folder inside folder to generate code to.  | String | src/main/java |   |
-| `targetFolder`                                      | Target folder to generate code to. If left empty, it will print to stdout.  | File |  |   |
-| `formatter`                                         | Code formatter implementation  | Formatters | palantir | palantir, spring, google  |
-| `skipFormatting`                                    | Skip java sources output formatting  | boolean | false |   |
-| `haltOnFailFormatting`                              | Halt on formatting errors  | boolean | true |   |
+tasks.register<dev.jbang.gradle.tasks.JBangTask>("generateAsyncApiProvider") {
+    group = "asyncapi"
+    description = "Generates Complete Consumer/Producer code from AsyncAPI specification"
+    script.set("io.zenwave360.sdk:zenwave-sdk-cli:RELEASE")
+    jbangArgs.set(listOf(
+        "--deps=" +
+            "org.slf4j:slf4j-simple:1.7.36," +
+            "io.zenwave360.sdk.plugins:asyncapi-generator:RELEASE," +
+            "org.apache.avro:avro-compiler:1.11.1",
+        "--java-options \"--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED\"",
+        "--java-options \"--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED\"",
+        "--java-options \"--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED\"",
+        "--java-options \"--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED\"",
+        "--java-options \"--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED\""
+    ))
+    args.set(listOf(
+        "-p", "AsyncAPIGenerator",
+        "role=provider",
+        "templates=$asyncapiGeneratorTemplates",
+        "apiFile=$asyncapiInputSpec",
+        "targetFolder=${layout.buildDirectory.dir("generated-sources/zenwave").get().asFile.absolutePath}",
+        "transactionalOutbox=modulith",
+        "modelPackage=$asyncApiModelPackage",
+        "producerApiPackage=$asyncApiProducerApiPackage",
+        "consumerApiPackage=$asyncApiConsumerApiPackage",
+        "avroCompilerProperties.imports=$asyncapiAvroImports"
+    ))
+}
+
+sourceSets {
+    main {
+        java {
+            srcDir(layout.buildDirectory.dir("generated-sources/zenwave/src/main/java").get().asFile)
+        }
+    }
+    test {
+        java {
+            srcDir(layout.buildDirectory.dir("generated-sources/zenwave/src/test/java").get().asFile)
+        }
+    }
+}
+```
+
+## Configuration Options
+
+| **Option** | **Description** | **Type** | **Default** | **Values** |
+|------------|-----------------|----------|-------------|------------|
+| `apiFile` | API Specification File | URI |  |   |
+| `role` | Project role: provider/client | AsyncapiRoleType | provider | provider, client  |
+| `templates` | Templates to use for code generation. | String | SpringCloudStream | SpringCloudStream, SpringKafka, FQ Class Name  |
+| `modelPackage` | Java Models package name | String |  |   |
+| `producerApiPackage` | Java API package name for outbound (producer) services. It can override apiPackage for producers. | String | {{apiPackage}} |   |
+| `consumerApiPackage` | Java API package name for inbound (consumer) services. It can override apiPackage for consumer. | String | {{apiPackage}} |   |
+| `apiPackage` | Java API package, if `producerApiPackage` and `consumerApiPackage` are not set. | String |  |   |
+| `operationIds` | Operation ids to include in code generation. Generates code for ALL if left empty | List | [] |   |
+| `excludeOperationIds` | Operation ids to exclude in code generation. Skips code generation if is not included or is excluded. | List | [] |   |
+| `transactionalOutbox` | Transactional outbox type for message producers. | TransactionalOutboxType | none | none, modulith  |
+| `jsonschema2pojo` | JsonSchema2Pojo settings for downstream library [(docs)](https://github.com/ZenWave360/zenwave-sdk/blob/main/plugins/asyncapi-jsonschema2pojo/src/main/java/io/zenwave360/sdk/plugins/JsonSchema2PojoConfiguration.java) | Map | {} |   |
+| `avroCompilerProperties` | Avro Compiler Properties | AvroCompilerProperties | See [AvroCompilerProperties](https://github.com/ZenWave360/zenwave-sdk/blob/main/plugins/avro-schema-compiler/src/main/java/io/zenwave360/sdk/plugins/AvroCompilerProperties.java) |   |
+| `avroCompilerProperties.sourceDirectory` | Avro schema file or folder containing avro schemas | File |  |   |
+| `avroCompilerProperties.imports` | Avro schema files or folders containing avro schemas. It supports local files/folders, `classpath:` files/folders or `https://` file resources. | List |  |   |
+| `avroCompilerProperties.includes` | A set of Ant-like inclusion patterns used to select files from the source tree that are to be processed. By default, the pattern **\/*.avsc is used to include all avro schema files. | List | [**/*.avsc] |   |
+| `avroCompilerProperties.excludes` | A set of Ant-like exclusion patterns used to prevent certain files from being processed. By default, this set is empty such that no files are excluded. | List |  |   |
+| `avroCompilerProperties.customLogicalTypeFactories` | Custom Logical Type Factories | List |  |   |
+| `avroCompilerProperties.customConversions` | Custom Conversions | List |  |   |
+| `bindingPrefix` | SC Streams Binding Name Prefix (used in @Component name) | String |  |   |
+| `bindingSuffix` | Spring-Boot binding suffix. It will be appended to the operation name kebab-cased. E.g. <operation-id>-in-0 | String | -0 |   |
+| `generatedAnnotationClass` | Annotation class to mark generated code (e.g. `org.springframework.aot.generate.Generated`). When retained at runtime, this prevents code coverage tools like Jacoco from including generated classes in coverage reports. | String |  |   |
+| `authentication` | Authentication configuration values for fetching remote resources. | List | [] |   |
+| `targetFolder` | Target folder to generate code to. If left empty, it will print to stdout. | File |  |   |
+| `modelNamePrefix` | Sets the prefix for model classes and enums | String |  |   |
+| `modelNameSuffix` | Sets the suffix for model classes and enums | String |  |   |
+| `runtimeHeadersProperty` | AsyncAPI extension property name for runtime auto-configuration of headers. | String | x-runtime-expression |   |
+| `messageNames` | Message names to include in code generation (combined with operationIds). Generates code for ALL if left empty | List | [] |   |
+| `sourceFolder` | Source folder inside folder to generate code to. | String | src/main/java |   |
+| `bindingTypes` | Binding names to include in code generation. Generates code for ALL bindings if left empty | List |  |   |
+| `avroFiles` | List of avro schema files to generate code for. It is alternative to sourceDirectory and imports. | List |  |   |
+| `skipProducerImplementation` | Generate only the producer interface and skip the implementation. | boolean | false |   |
+| `exposeMessage` | Whether to expose underlying spring Message to consumers or not. | boolean | false |   |
+| `useEnterpriseEnvelope` | Include support for enterprise envelop wrapping/unwrapping. | boolean | false |   |
+| `envelopeJavaTypeExtensionName` | AsyncAPI Message extension name for the envelop java type for wrapping/unwrapping. | String | x-envelope-java-type |   |
+| `methodAndMessageSeparator` | To avoid method erasure conflicts, when exposeMessage or reactive style this character will be used as separator to append message payload type to method names in consumer interfaces. | String | $ |   |
+| `consumerPrefix` | SC Streams Binder class prefix | String |  |   |
+| `consumerSuffix` | SC Streams Binder class suffix | String | Consumer |   |
+| `consumerServicePrefix` | Business/Service interface prefix | String | I |   |
+| `consumerServiceSuffix` | Business/Service interface suffix | String | ConsumerService |   |
+| `formatter` | Code formatter implementation | Formatters | palantir | palantir, spring, google  |
+| `skipFormatting` | Skip java sources output formatting | boolean | false |   |
+| `haltOnFailFormatting` | Halt on formatting errors | boolean | true |   |
 
 ## Getting Help
 
 ```shell
-jbang zw -p io.zenwave360.sdk.plugins.AsyncAPIGeneratorPlugin``
+jbang zw -p io.zenwave360.sdk.plugins.AsyncAPIGeneratorPlugin --help
+```
